--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="scrollbar-width: none; overflow: hidden;">
+<html lang="en" style="scrollbar-width: none;">
 
 <head>
     <meta charset="utf-8" />
